# cookiecutter-python-template

./: README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.sh
{{cookiecutter.package_name}}/: LICENSE  README.md  pyproject.toml
{{cookiecutter.package_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.package_name}}/docs/source/dev/: index.rst
{{cookiecutter.package_name}}/docs/source/user/: index.rst
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  console.py
{{cookiecutter.package_name}}/tests/: test_project.py
