[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.0.1"
description = "{{cookiecutter.package_description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
#license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
pydantic = "*"
python-dotenv = "*"

[tool.poetry.dev-dependencies]
black = "==22.6"
flake8 = "==3.8.4"
pre-commit = "*"
pytest = "*"
pytest-sugar = "*"
sphinx = "*"
sphinx-autobuild = "*"

[tool.poetry.scripts]
{{cookiecutter.package_command}} = "{{cookiecutter.package_name}}.console:entry_point"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "{{cookiecutter.git_branch}}"
build_command = "pip install poetry && poetry build"
dist_path = "dist/"
upload_to_pypi = false
remove_dist = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
